@@ -1,9 +1,11 @@
 package co.ello.ElloApp;
 
 import android.app.ProgressDialog;
+import android.content.BroadcastReceiver;
 import android.content.ComponentCallbacks2;
 import android.content.Context;
 import android.content.Intent;
+import android.content.IntentFilter;
 import android.content.pm.ApplicationInfo;
 import android.content.pm.PackageInfo;
 import android.content.pm.PackageManager;
@@ -12,15 +14,24 @@ import android.net.Uri;
 import android.os.Build;
 import android.os.Bundle;
 import android.support.v4.widget.SwipeRefreshLayout;
-import android.support.v7.app.ActionBarActivity;
+import android.util.Log;
 import android.view.WindowManager;
 
+import com.google.android.gms.common.ConnectionResult;
+import com.google.android.gms.common.GoogleApiAvailability;
+
+import org.xwalk.core.XWalkActivity;
 import org.xwalk.core.XWalkPreferences;
 import org.xwalk.core.XWalkResourceClient;
 import org.xwalk.core.XWalkView;
 
+import javax.inject.Inject;
+
+import co.ello.ElloApp.Dagger.ElloApp;
+import co.ello.ElloApp.PushNotifications.RegistrationIntentService;
+
 public class MainActivity
-        extends ActionBarActivity
+        extends XWalkActivity
         implements SwipeRefreshLayout.OnRefreshListener
 {
     private final static String TAG = MainActivity.class.getSimpleName();
@@ -31,55 +42,83 @@ public class MainActivity
     private static final int PLAY_SERVICES_RESOLUTION_REQUEST = 9000;
     public XWalkView xWalkView;
     private SwipeRefreshLayout swipeLayout;
-    public String path = "https://ello-fg-stage1.herokuapp.com";
+    public String path = "https://ello.co";
     private ProgressDialog progress;
     private Boolean shouldReload = false;
+    private BroadcastReceiver registerDeviceReceiver;
+    private BroadcastReceiver pushReceivedReceiver;
+    private boolean isXWalkReady = false;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
+        ((ElloApp) getApplication()).getNetComponent().inject(this);
         setContentView(R.layout.activity_main);
-        mSwipeLayout = (SwipeRefreshLayout) findViewById(R.id.container);
-        mSwipeLayout.setOnRefreshListener(this);
+        swipeLayout = (SwipeRefreshLayout) findViewById(R.id.container);
+        swipeLayout.setOnRefreshListener(this);
         setupWebView();
+        setupRegisterDeviceReceiver();
+        setupPushReceivedReceiver();
+    }
+
+    protected void onXWalkReady() {
+        isXWalkReady = true;
+        xWalkView.getSettings().setUserAgentString(userAgentString());
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.KITKAT) {
+            if (0 != (getApplicationInfo().flags &= ApplicationInfo.FLAG_DEBUGGABLE)){
+                XWalkPreferences.setValue(XWalkPreferences.REMOTE_DEBUGGING, true);
+            }
+        }
+
         displayScreenContent();
         deepLinkWhenPresent();
     }
 
-    @Override public void onRefresh() {
-        if(!Reachability.isNetworkConnected(this)) {
+    @Override
+    public void onRefresh() {
+        if(!reachability.isNetworkConnected()) {
             displayScreenContent();
         }
-        mWebView.reload(XWalkView.RELOAD_IGNORE_CACHE);
-        mSwipeLayout.setRefreshing(false);
+        if(isXWalkReady) {
+            xWalkView.reload(XWalkView.RELOAD_IGNORE_CACHE);
+        }
+        swipeLayout.setRefreshing(false);
     }
 
     @Override
     protected void onResume() {
         super.onResume();
-        mWebView.resumeTimers();
-        mWebView.onShow();
+        if(isXWalkReady) {
+            xWalkView.resumeTimers();
+            xWalkView.onShow();
+        }
 
-        if(!Reachability.isNetworkConnected(this) || mWebView == null) {
+        if(!reachability.isNetworkConnected() || xWalkView == null) {
             displayScreenContent();
         }
-        else if(shouldReload) {
+        else if(shouldReload && isXWalkReady) {
             shouldReload = false;
-            mWebView.reload(XWalkView.RELOAD_IGNORE_CACHE);
+            xWalkView.reload(XWalkView.RELOAD_IGNORE_CACHE);
         }
         deepLinkWhenPresent();
     }
 
     @Override
     protected void onPause() {
-        mWebView.pauseTimers();
-        mWebView.onHide();
+        xWalkView.pauseTimers();
+        xWalkView.onHide();
         super.onPause();
     }
 
     @Override
     protected void onDestroy() {
-        mWebView.onDestroy();
+        xWalkView.onDestroy();
+        if (registerDeviceReceiver != null) {
+            unregisterReceiver(registerDeviceReceiver);
+        }
+        if (pushReceivedReceiver != null) {
+            unregisterReceiver(pushReceivedReceiver);
+        }
         super.onDestroy();
     }
 
@@ -93,12 +132,43 @@ public class MainActivity
 
     @Override
     protected void onActivityResult(int requestCode, int resultCode, Intent intent) {
-        mWebView.onActivityResult(requestCode, resultCode, intent);
+        xWalkView.onActivityResult(requestCode, resultCode, intent);
     }
 
     @Override
     protected void onNewIntent(Intent intent) {
-        mWebView.onNewIntent(intent);
+        xWalkView.onNewIntent(intent);
+    }
+
+    private void setupRegisterDeviceReceiver() {
+        Log.d(TAG, "setupRegisterDeviceReceiver");
+        registerDeviceReceiver = new BroadcastReceiver() {
+            @Override
+            public void onReceive(Context context, Intent intent) {
+                String reg_id = intent.getExtras().getString("GCM_REG_ID");
+                if(reg_id != null) {
+                    Log.d(TAG,reg_id);
+                    xWalkView.load("javascript:registerAndroidNotifications(\"" + reg_id + "\")", null);
+                }
+            }
+        };
+
+        registerReceiver(registerDeviceReceiver, new IntentFilter(ElloPreferences.REGISTRATION_COMPLETE));
+    }
+
+    private void setupPushReceivedReceiver() {
+        Log.d(TAG, "setupPushReceivedReceiver");
+        pushReceivedReceiver = new BroadcastReceiver() {
+            @Override
+            public void onReceive(Context context, Intent intent) {
+                String page = intent.getExtras().getString("push_notification_page");
+                if(page != null) {
+                    Log.d(TAG, page);
+                    xWalkView.load(page, null);
+                }
+            }
+        };
+        registerReceiver(pushReceivedReceiver, new IntentFilter(ElloPreferences.PUSH_RECEIVED));
     }
 
     private void deepLinkWhenPresent(){
@@ -106,13 +176,13 @@ public class MainActivity
 
         if (data != null) {
             path = data.toString();
-            mWebView.load(path, null);
+            xWalkView.load(path, null);
         }
     }
 
     private void displayScreenContent() {
-        if(Reachability.isNetworkConnected(this)) {
-            mWebView.load(path, null);
+        if(reachability.isNetworkConnected()) {
+            xWalkView.load(path, null);
         } else {
             setupNoInternetView();
         }
@@ -125,29 +195,23 @@ public class MainActivity
     }
 
     private void setupWebView() {
-        mWebView = (XWalkView) findViewById(R.id.activity_main_webview);
-        mWebView.setResourceClient(new ElloResourceClient(mWebView));
-        mWebView.setAlpha(0.0f);
-        mWebView.getSettings().setUserAgentString(userAgentString());
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.KITKAT) {
-            if (0 != (getApplicationInfo().flags &= ApplicationInfo.FLAG_DEBUGGABLE)){
-                XWalkPreferences.setValue(XWalkPreferences.REMOTE_DEBUGGING, true);
-            }
-        }
+        xWalkView = (XWalkView) findViewById(R.id.activity_main_webview);
+        xWalkView.setResourceClient(new ElloResourceClient(xWalkView));
+        xWalkView.setAlpha(0.0f);
     }
 
     private String userAgentString() {
         String version = "";
         String versionCode = "";
-        PackageInfo pInfo = null;
+        PackageInfo pInfo;
         try {
             pInfo = getPackageManager().getPackageInfo(getPackageName(), 0);
             version = pInfo.versionName;
-            versionCode = new Integer(pInfo.versionCode).toString();
+            versionCode = Integer.valueOf(pInfo.versionCode).toString();
         } catch (PackageManager.NameNotFoundException e) {
             e.printStackTrace();
         }
-        return mWebView.getSettings().getUserAgentString() + " Ello Android/" + version + " (" + versionCode + ")";
+        return xWalkView.getSettings().getUserAgentString() + " Ello Android/" + version + " (" + versionCode + ")";
     }
 
     private ProgressDialog createProgressDialog(Context mContext) {
@@ -161,8 +225,31 @@ public class MainActivity
         return dialog;
     }
 
-    class ElloResourceClient extends XWalkResourceClient {
+    private boolean checkPlayServices() {
+        GoogleApiAvailability apiAvailability = GoogleApiAvailability.getInstance();
+        int resultCode = apiAvailability.isGooglePlayServicesAvailable(this);
+        if (resultCode != ConnectionResult.SUCCESS) {
+            if (apiAvailability.isUserResolvableError(resultCode)) {
+                apiAvailability.getErrorDialog(this, resultCode, PLAY_SERVICES_RESOLUTION_REQUEST)
+                        .show();
+            } else {
+                Log.i(TAG, "This device is not supported.");
+                finish();
+            }
+            return false;
+        }
+        return true;
+    }
 
+    private void registerForGCM() {
+        Log.d(TAG, "registerForGCM");
+        if (checkPlayServices()) {
+            Intent intent = new Intent(this, RegistrationIntentService.class);
+            startService(intent);
+        }
+    }
+
+    class ElloResourceClient extends XWalkResourceClient {
 
         public ElloResourceClient(XWalkView xwalkView) {
             super(xwalkView);
@@ -183,10 +270,11 @@ public class MainActivity
         public void onLoadFinished(XWalkView view, String url) {
             super.onLoadFinished(view, url);
             if(urlWithoutSlash(url).equals(path)) {
-                mWebView.setAlpha(1.0f);
+                xWalkView.setAlpha(1.0f);
                 if (progress != null) {
                     progress.dismiss();
                 }
+                registerForGCM();
             }
         }
 
